added date validator, locations, cleaning etc